Changed image on about page from square centered image to jumbotron style full width. Added done button for assessment and modal to indicate that progress was saved. Login and Submit now close when submitted (pretending that they get filled out and work). Finished adding tooltip text. Changed some label text (transportation) to fix spacing issues on smaller screens. Added modals for goals tab to indicate when you earn badges.

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,14 @@ h5 {
     width: 800px;
 }
 
+.jumbotron {
+    height: 450px;
+    background-image: url("earth_horizon-wide.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
 #assessment {
     display: none;
 }
@@ -126,7 +134,6 @@ h5 {
 }
 
 #about_name{
-    padding-top: 10px;
     font-size: 1.75rem;
     font-weight: bolder;
     font-style: italic;
